--- a/MiniPhotoshop/MiniPhotoshop.vcxproj.filters
+++ b/MiniPhotoshop/MiniPhotoshop.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="HistogramForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MixImage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HistogramForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MixImage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
